[package]
name = "grpc-web"
version = "0.1.0"
authors = ["mgeorge <mmge93@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# Bug in wasm-pack? Can fix if we don't wasm_bindgen any strings
# See <https://github.com/rustwasm/wasm-bindgen/issues/2279>
wasm-opt = false 

#[lib]
#crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"
futures = "0.3.7"
serde_json = "1.0"
prost = { path = "/home/matt/prost" }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.45"
features = [
"console", 
'Headers',
'Request',
'RequestInit',
'RequestMode',
'Response',
'Window'
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"

